# django-action

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nginx/: default.conf
start/: IFLOW.md  README.md  debug.py  send.http
start/api/: models.py  tasks.py  tests.py  urls.py  views.py
start/api/account/: account.py
start/api/email/: __init__.py  email.py  urls.py  views.py
start/api/migrations/: 0001_initial.py  0002_account.py  0003_rename_receiver_email_form_rename_sender_email_to_and_more.py  0004_rename_form_email_from_email.py  0005_email_from_name.py
start/api/student/: student.py
start/docs/: celery.md  use_migrationrecorder.py
start/imap_tools/: query.py
start/start/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
start/start-frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
start/start-frontend/src/: App.tsx  main.tsx
start/start-frontend/src/components/: MainLayout.tsx
start/start-frontend/src/context/: EmailContext.tsx  EmailContextProvider.tsx
start/start-frontend/src/router/: index.ts  router.tsx
start/start-frontend/src/types/: email.ts
start/start-frontend/src/util/: email.ts  request.ts
start/start-frontend/src/views/: Home.tsx
start/static/: index-CAF3d7Yv.js  index-CnvXBRJm.js  index-DK8J0-op.css
start/templates/: index.html
start/tests/: test_date.py  test_date_str.py  test_email.py  test_get_date.py  test_iter.py  test_uid.py  test_uids.py  test_union_query.py
start/utils/: __init__.py  email.py  exception.py  main.py  result.py
(+6 files in other folders)
